 - (djm) [ssh-rand-helper.c] Print error and usage() when passed command-    line arguments as none are supported. Exit when passed unrecognised    commandline flags. bz#1568 from gson AT araneus.fi